--- a/compose/compose.yaml
+++ b/compose/compose.yaml
@@ -34,6 +34,8 @@ services:
     volumes: *appvolumes
     env_file: env/phpfpm.env
     #extra_hosts: *appextrahosts
+    networks:
+      - icepim_icepim-network
 
   db:
     image: mariadb:10.6
@@ -46,6 +48,8 @@ services:
     env_file: env/db.env
     volumes:
       - dbdata:/var/lib/mysql
+    networks:
+      - icepim_icepim-network
 
   ## If you wish to use MySQL, comment out the mariadb db image above and
   ## uncomment this block.
@@ -65,6 +69,8 @@ services:
     image: redis:7.2-alpine
     ports:
       - "6379:6379"
+    networks:
+      - icepim_icepim-network
 
   opensearch:
     image: markoshust/magento-opensearch:2.12-0
@@ -82,6 +88,8 @@ services:
       #- "OPENSEARCH_JAVA_OPTS=-Xms1g -Xmx1g"
       ## Uncomment to increase the virtual memory map count
       #- "max_map_count=262144"
+    networks:
+      - icepim_icepim-network
 
   ## If you wish to use Elasticsearch, comment out opensearch image above and
   ## uncomment this block. Do the same in the composer.healthcheck.yaml file.
@@ -113,11 +121,15 @@ services:
     volumes:
       - rabbitmqdata:/var/lib/rabbitmq
     env_file: env/rabbitmq.env
+    networks:
+      - icepim_icepim-network
 
   mailcatcher:
     image: sj26/mailcatcher
     ports:
       - "1080:1080"
+    networks:
+      - icepim_icepim-network
 
   ## Cloudflare tunnel support, uncomment to enable
   #tunnel:
@@ -146,3 +158,6 @@ volumes:
   rabbitmqdata:
   sockdata:
   ssldata:
+networks:
+  icepim_icepim-network:
+    external: true
